--- a/reports/Test-Report-2024.09.15>11.37.09.html
+++ b/reports/Test-Report-2024.09.15>11.37.09.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">OpenCart Functional testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 2, 2024 10:11:44 AM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 15, 2024 11:37:09 AM</span></a>
 </li>
 </ul>
 </div>
@@ -85,14 +85,14 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="1"
+        <li class="test-item"  status="pass" test-id="2"
           author=""
           tag="Regression Master"
           device="">
           <div class="test-detail">
-            <p class="name">testCases.TC10MyAccountPageTest</p>
+            <p class="name">testCases.TC001AccountRegistration</p>
             <p class="text-sm">
-              <span>10:11:48 AM</span> / <span>00:00:00:008</span>
+              <span>11:37:12 AM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -100,11 +100,11 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">testCases.TC10MyAccountPageTest</h5>
-<span class='badge badge-success'>09.02.2024 10:11:48 AM</span>
-<span class='badge badge-danger'>09.02.2024 10:11:48 AM</span>
-<span class='badge badge-default'>00:00:00:008</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
+<h5 class="test-status text-pass">testCases.TC001AccountRegistration</h5>
+<span class='badge badge-success'>09.15.2024 11:37:12 AM</span>
+<span class='badge badge-danger'>09.15.2024 11:37:12 AM</span>
+<span class='badge badge-default'>00:00:00:000</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
@@ -118,9 +118,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:11:48 AM</td>
+        <td>11:37:12 AM</td>
         <td>
-          verifyMyAccountPagegot successfully excuted
+          verifyAccountRegistrationgot successfully excuted
         </td>
       </tr>
   </tbody>
@@ -169,9 +169,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:11:48 AM</td>
+<td>11:37:12 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>testCases.TC10MyAccountPageTest</a>
+<a href="#" class="linked" test-id='2' id='2'>testCases.TC001AccountRegistration</a>
 </td>
 </tr>
 </tbody>
@@ -202,9 +202,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:11:48 AM</td>
+<td>11:37:12 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>testCases.TC10MyAccountPageTest</a>
+<a href="#" class="linked" test-id='2' id='2'>testCases.TC001AccountRegistration</a>
 </td>
 </tr>
 </tbody>
@@ -224,13 +224,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 2, 2024 10:11:44 AM</h3>
+<h3>Sep 15, 2024 11:37:09 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 2, 2024 10:11:49 AM</h3>
+<h3>Sep 15, 2024 11:37:12 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -300,7 +300,7 @@
 </div></div>
 <script>
 var timeline = {
-"testCases.TC10MyAccountPageTest":0.008
+"testCases.TC001AccountRegistration":0
 };
 </script>
 <div class="row">
