--- a/reports/Test-Report-2024.09.15>11.38.11.html
+++ b/reports/Test-Report-2024.09.15>11.38.11.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">OpenCart Functional testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 2, 2024 10:12:55 AM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 15, 2024 11:38:11 AM</span></a>
 </li>
 </ul>
 </div>
@@ -79,7 +79,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">Master</a><a class="dropdown-item" href="#">Regression</a>
+<a class="dropdown-item" href="#">Regression</a><a class="dropdown-item" href="#">Master</a>
 </ul>
 </li>
 </ul>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">testCases.TC004SeachPhoneTest</p>
             <p class="text-sm">
-              <span>10:12:59 AM</span> / <span>00:00:00:000</span>
+              <span>11:38:15 AM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,8 +101,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testCases.TC004SeachPhoneTest</h5>
-<span class='badge badge-success'>09.02.2024 10:12:59 AM</span>
-<span class='badge badge-danger'>09.02.2024 10:12:59 AM</span>
+<span class='badge badge-success'>09.15.2024 11:38:15 AM</span>
+<span class='badge badge-danger'>09.15.2024 11:38:15 AM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=9</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -118,7 +118,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:12:59 AM</td>
+        <td>11:38:15 AM</td>
         <td>
           verifyProductSearchgot successfully excuted
         </td>
@@ -150,39 +150,6 @@
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">Master</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>Master</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>10:12:59 AM</td>
-<td>
-<a href="#" class="linked" test-id='9' id='9'>testCases.TC004SeachPhoneTest</a>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>1</span>
-</span>
 <p class="name">Regression</p>
 <p class="duration text-sm">1 tests</p>
 </div>
@@ -202,7 +169,40 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:12:59 AM</td>
+<td>11:38:15 AM</td>
+<td>
+<a href="#" class="linked" test-id='9' id='9'>testCases.TC004SeachPhoneTest</a>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>1</span>
+</span>
+<p class="name">Master</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>Master</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>11:38:15 AM</td>
 <td>
 <a href="#" class="linked" test-id='9' id='9'>testCases.TC004SeachPhoneTest</a>
 </td>
@@ -224,13 +224,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 2, 2024 10:12:55 AM</h3>
+<h3>Sep 15, 2024 11:38:11 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 2, 2024 10:12:59 AM</h3>
+<h3>Sep 15, 2024 11:38:15 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -310,7 +310,7 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>Master</td>
+<td>Regression</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -318,7 +318,7 @@ var timeline = {
 <td>100%</td>
 </tr>
 <tr>
-<td>Regression</td>
+<td>Master</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
