--- a/reports/Test-Report-2024.09.15>11.38.26.html
+++ b/reports/Test-Report-2024.09.15>11.38.26.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">OpenCart Functional testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 2, 2024 10:11:53 AM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 15, 2024 11:38:26 AM</span></a>
 </li>
 </ul>
 </div>
@@ -79,20 +79,20 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">Master</a><a class="dropdown-item" href="#">Sanity</a>
+<a class="dropdown-item" href="#">Master</a><a class="dropdown-item" href="#">Regression</a>
 </ul>
 </li>
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="3"
+        <li class="test-item"  status="pass" test-id="13"
           author=""
-          tag="Sanity Master"
+          tag="Regression Master"
           device="">
           <div class="test-detail">
-            <p class="name">testCases.TC002LoginTest</p>
+            <p class="name">testCases.TC008ProductComparisonLinkTest</p>
             <p class="text-sm">
-              <span>10:11:57 AM</span> / <span>00:00:00:001</span>
+              <span>11:38:30 AM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -100,16 +100,16 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">testCases.TC002LoginTest</h5>
-<span class='badge badge-success'>09.02.2024 10:11:57 AM</span>
-<span class='badge badge-danger'>09.02.2024 10:11:57 AM</span>
-<span class='badge badge-default'>00:00:00:001</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
+<h5 class="test-status text-pass">testCases.TC008ProductComparisonLinkTest</h5>
+<span class='badge badge-success'>09.15.2024 11:38:30 AM</span>
+<span class='badge badge-danger'>09.15.2024 11:38:30 AM</span>
+<span class='badge badge-default'>00:00:00:000</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=13</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
-<div class="m-t-15"><span class="badge badge-pill badge-default">Sanity</span>
+<div class="m-t-15"><span class="badge badge-pill badge-default">Regression</span>
 <span class="badge badge-pill badge-default">Master</span></div>
 </div>
 </div><div class="detail-body mt-4">
@@ -118,9 +118,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:11:57 AM</td>
+        <td>11:38:30 AM</td>
         <td>
-          verify_logingot successfully excuted
+          verifyLinkInSuccessMessagegot successfully excuted
         </td>
       </tr>
   </tbody>
@@ -169,9 +169,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:11:57 AM</td>
+<td>11:38:30 AM</td>
 <td>
-<a href="#" class="linked" test-id='3' id='3'>testCases.TC002LoginTest</a>
+<a href="#" class="linked" test-id='13' id='13'>testCases.TC008ProductComparisonLinkTest</a>
 </td>
 </tr>
 </tbody>
@@ -183,12 +183,12 @@
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">Sanity</p>
+<p class="name">Regression</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>Sanity</h4>
+<h4>Regression</h4>
 <span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -202,9 +202,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>10:11:57 AM</td>
+<td>11:38:30 AM</td>
 <td>
-<a href="#" class="linked" test-id='3' id='3'>testCases.TC002LoginTest</a>
+<a href="#" class="linked" test-id='13' id='13'>testCases.TC008ProductComparisonLinkTest</a>
 </td>
 </tr>
 </tbody>
@@ -224,13 +224,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 2, 2024 10:11:53 AM</h3>
+<h3>Sep 15, 2024 11:38:26 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 2, 2024 10:11:58 AM</h3>
+<h3>Sep 15, 2024 11:38:30 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -300,7 +300,7 @@
 </div></div>
 <script>
 var timeline = {
-"testCases.TC002LoginTest":0.001
+"testCases.TC008ProductComparisonLinkTest":0
 };
 </script>
 <div class="row">
@@ -318,7 +318,7 @@ var timeline = {
 <td>100%</td>
 </tr>
 <tr>
-<td>Sanity</td>
+<td>Regression</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
